# skewer

./: .clang-tidy  CMakeLists.txt
.github/: pull_request_template.md
apps/worker/: main.cc
scripts/: tidy.sh
src/accelerators/: bvh.cc
src/film/: film.cc  image_buffer.cc  image_buffer.h
src/integrators/: normals.cc  path_trace.cc
src/io/: image_io.cc  image_io.h  obj_loader.cc
src/materials/: bsdf.cc
src/scene/: light.cc  scene.cc  scene.h
src/session/: render_session.cc  render_session.h
